<resources>
    <string name="app_name">News</string>
    <string name="permission_explanation_title">Please provide permissions</string>
    <string name="permission_explanation_content">This permissions will be used to read your IMEI and saving photos</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="build_info">%1$s %2$d</string>
    <string name="info_email_text_label">Email</string>
    <string name="info_name_text_label">Name</string>
    <string name="info_surname_text_label">Surname</string>
    <string name="info_phone_text_label">Phone</string>
    <string name="save_info_button">Save</string>
    <string name="edit_account">Edit</string>
    <string name="surname_default">Pupkin</string>
    <string name="name_default">Vasya</string>
    <string name="email_default">vasya@google.com</string>
    <string name="phone_default">+375228322</string>
    <string name="about">About</string>
    <string name="home">News</string>
    <string name="account">Account</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_button_text">Register</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="logout">Logout</string>
    <string name="navigation_confirmation_header">Are you sure to close editing?</string>
    <string name="navigation_confirmation_content">You can lose unsaved data</string>
    <string name="password_empty">Password is empty</string>
    <string name="add_address">Add</string>
    <string name="build_version">Build version</string>
    <string name="imei_text_view_label">IMEI</string>
</resources>
