<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/accountLogo"
            android:layout_width="94dp"
            android:layout_height="89dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/about" />

        <EditText
            android:id="@+id/info_email_textEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minWidth="200dp"
            android:paddingBottom="13dp"
            android:text="vasya_pupkin322@gmail.com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLogo" />

        <EditText
            android:id="@+id/info_name_textEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minWidth="200dp"
            android:paddingBottom="13dp"
            android:text="Vasya"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_email_textEdit" />

        <EditText
            android:id="@+id/info_surname_textEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minWidth="200dp"
            android:paddingBottom="13dp"
            android:text="Pupkin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_name_textEdit" />

        <EditText
            android:id="@+id/info_phone_textEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minWidth="200dp"
            android:paddingBottom="13dp"
            android:text="322"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_surname_textEdit" />

        <TextView
            android:id="@+id/info_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/info_email_text_label"
            app:layout_constraintBottom_toTopOf="@+id/info_email_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/info_name_text_label"
            app:layout_constraintBottom_toTopOf="@+id/info_name_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/info_surname_text_label"
            app:layout_constraintBottom_toTopOf="@+id/info_surname_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.323"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info_phone_label"
            android:layout_width="43dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/info_phone_text_label"
            app:layout_constraintBottom_toTopOf="@+id/info_phone_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_info_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_phone_textEdit"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>